# user-service

./: .gitignore  Cargo.toml
src/lib/: env.rs
src/lib/application/: http.rs  ports.rs
src/lib/application/ports/: messaging_ports.rs
src/lib/domain/user/: events.rs
src/lib/infrastructure/messaging/: pubsub.rs
