[package]
name = "user"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "user-server"

[lib]
path = "src/lib/lib.rs"
name = "user"

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.31"
google-cloud-googleapis = "0.16.0"
google-cloud-pubsub = "0.30.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
